# iso2wbfs

./: .gitignore  Cargo.toml  README.md  iso2wbfs.py  llm_prompts.txt  wbfs_file_2.9-master.txt
.cargo/: config.toml
.github/workflows/: release.yml
cargo/: config.toml
reference/: initial_llm_prompt.txt  rvz-1.0.3.txt  wbfs_file-2.9.txt
src/: lib.rs  main.rs  util.rs
