[package]
name = "iso2wbfs"
version = "1.2.7"
edition = "2024"
authors = ["Manuel Quarneti <mq1@ik.me>"]
description = "A Rust utility to replicate wbfs_file 2.9 functionality for converting Wii disc images to split WBFS format."
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0"
nod = "2.0.0-alpha.3"
sanitize-filename-reader-friendly = "2.3"
num_cpus = "1.17"
log = "0.4"

# CLI dependencies
env_logger = { version = "0.11", optional = true, default-features = false, features = ["auto-color", "humantime"] }
indicatif = { version = "0.18", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }

[features]
cli = ["dep:env_logger", "dep:indicatif", "dep:clap"]

[[bin]]
name = "iso2wbfs"
required-features = ["cli"]

[profile.release]
strip = "debuginfo"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace]
