[package]
name = "iso2wbfs"
version = "2.0.0"
edition = "2024"
authors = ["Manuel Quarneti <mq1@ik.me>"]
description = "A Rust utility to replicate wbfs_file 2.9 functionality for converting Wii disc images to split WBFS format."
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0"
nod = "2.0.0-alpha.3"
sanitize-filename-reader-friendly = "2.3"
num_cpus = "1.17"
tracing = "0.1"

# CLI dependencies
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt", "json"] }
indicatif = { version = "0.18", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }

[features]
cli = ["dep:tracing-subscriber", "dep:indicatif", "dep:clap"]

[[bin]]
name = "iso2wbfs"
required-features = ["cli"]

[profile.release]
strip = "debuginfo"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace]
